fix: spinner visible on page load

--- a/app/assets/stylesheets/site/_markdown_preview.sass
+++ b/app/assets/stylesheets/site/_markdown_preview.sass
@@ -13,3 +13,7 @@
 
   .broken-markdown-link
     color: red
+
+  .shared-spinner
+    color: $color_primary !important
+    display: none
